[JUX2] Front-end modules editing: Fixed RTL positions to be right, fixed invisible tooltips at borders of window, fixed accessibility

--- a/media/system/css/frontediting.css
+++ b/media/system/css/frontediting.css
@@ -18,6 +18,11 @@
     top: 0;
     right: 0;
 }
+html[dir=rtl] .btn.jmodedit
+{
+    right: auto;
+    left: 0;
+}
 
 /* Menu edit in front-end */
 
